// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should CurrentOfferItem render correctly Should CurrentOfferItem render correctly with premium offers and super host when the user is authorized 1`] = `
<div
  className="property__wrapper"
>
  <div
    className="property__mark"
  >
    <span>
      Premium
    </span>
  </div>
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      The house among olive
    </h1>
    <button
      className="property__bookmark-button property__bookmark-button--active button"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "76%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      3.8
    </span>
  </div>
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      house
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      2
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adult
      s
    </li>
  </ul>
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      200
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>
  <div
    className="property__inside"
  >
    <h2
      className="property__inside-title"
    >
      What's inside
    </h2>
    <ul
      className="property__inside-list"
    >
      <li
        className="property__inside-item"
      >
        Laptop friendly workspace
      </li>
      <li
        className="property__inside-item"
      >
        Washer
      </li>
      <li
        className="property__inside-item"
      >
        Towels
      </li>
    </ul>
  </div>
  <div
    className="property__host"
  >
    <h2
      className="property__host-title"
    >
      Meet the host
    </h2>
    <div
      className="property__host-user user"
    >
      <div
        className="property__avatar-wrapper user__avatar-wrapper property__avatar-wrapper--pro"
      >
        <img
          alt="Host avatar"
          className="property__avatar user__avatar"
          height="74"
          src="/img/avatar-angelina.jpg"
          width="74"
        />
      </div>
      <span
        className="property__user-name"
      >
        Angelina
      </span>
    </div>
    <div
      className="property__description"
    >
      <p
        className="property__text"
      >
        Discover daily local life in city center,
    friendly neighborhood, clandestine casino, karaoke,
    old-style artisans, art gallery and artist studio downstairs.
      </p>
    </div>
  </div>
  <section
    className="property__reviews reviews"
  >
    <h2
      className="reviews__title"
    >
      Reviews · 
      <span
        className="reviews__amount"
      >
        2
      </span>
    </h2>
    <ul
      className="reviews__list"
    >
      <li
        className="reviews__item"
      >
        <div
          className="reviews__user user"
        >
          <div
            className="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              className="reviews__avatar user__avatar"
              height="54"
              src="img/avatar-angelina.jpg"
              width="54"
            />
          </div>
          <span
            className="reviews__user-name"
          >
            Angelina
          </span>
        </div>
        <div
          className="reviews__info"
        >
          <div
            className="reviews__rating rating"
          >
            <div
              className="reviews__stars rating__stars"
            >
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
              <span
                className="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            className="reviews__text"
          >
            The house is very good, very happy, hygienic and simple living conditions around it are also very good
          </p>
          <time
            className="reviews__time"
            dateTime="2020-11-01"
          >
            November 2020
          </time>
        </div>
      </li>
      <li
        className="reviews__item"
      >
        <div
          className="reviews__user user"
        >
          <div
            className="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              className="reviews__avatar user__avatar"
              height="54"
              src="img/avatar-angelina.jpg"
              width="54"
            />
          </div>
          <span
            className="reviews__user-name"
          >
            Angelina
          </span>
        </div>
        <div
          className="reviews__info"
        >
          <div
            className="reviews__rating rating"
          >
            <div
              className="reviews__stars rating__stars"
            >
              <span
                style={
                  Object {
                    "width": "60%",
                  }
                }
              />
              <span
                className="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            className="reviews__text"
          >
            The deluxe room was a quite comfortable one with all the adequate facilities
          </p>
          <time
            className="reviews__time"
            dateTime="2020-11-01"
          >
            November 2020
          </time>
        </div>
      </li>
    </ul>
    <form
      action="#"
      className="reviews__form form"
      method="post"
    >
      <label
        className="reviews__label form__label"
        htmlFor="review"
      >
        Your review
      </label>
      <div
        className="reviews__rating-form form__rating"
        required={true}
      >
        <input
          checked={false}
          className="form__rating-input visually-hidden"
          id="5-stars"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="5"
        />
        <label
          className="reviews__rating-label form__rating-label"
          htmlFor="5-stars"
          title="perfect"
        >
          <svg
            className="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </label>
        <input
          checked={false}
          className="form__rating-input visually-hidden"
          id="4-stars"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="4"
        />
        <label
          className="reviews__rating-label form__rating-label"
          htmlFor="4-stars"
          title="good"
        >
          <svg
            className="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </label>
        <input
          checked={false}
          className="form__rating-input visually-hidden"
          id="3-stars"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="3"
        />
        <label
          className="reviews__rating-label form__rating-label"
          htmlFor="3-stars"
          title="not bad"
        >
          <svg
            className="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </label>
        <input
          checked={false}
          className="form__rating-input visually-hidden"
          id="2-stars"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="2"
        />
        <label
          className="reviews__rating-label form__rating-label"
          htmlFor="2-stars"
          title="badly"
        >
          <svg
            className="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </label>
        <input
          checked={false}
          className="form__rating-input visually-hidden"
          id="1-stars"
          name="rating"
          onChange={[Function]}
          type="radio"
          value="1"
        />
        <label
          className="reviews__rating-label form__rating-label"
          htmlFor="1-stars"
          title="terribly"
        >
          <svg
            className="form__star-image"
            height="33"
            width="37"
          >
            <use
              xlinkHref="#icon-star"
            />
          </svg>
        </label>
      </div>
      <textarea
        className="reviews__textarea form__textarea"
        id="review"
        maxLength="300"
        minLength="50"
        name="review"
        onChange={[Function]}
        placeholder="Tell how was your stay, what you like and what can be improved"
        required={true}
      />
      <div
        className="reviews__button-wrapper"
      >
        <p
          className="reviews__help"
        >
          To submit review please make sure to set 
          <span
            className="reviews__star"
          >
            rating
          </span>
           and describe your stay with at least 
          <b
            className="reviews__text-amount"
          >
            50 characters
          </b>
          .
        </p>
        <button
          className="reviews__submit form__submit button"
          disabled={true}
          onClick={[Function]}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`Should CurrentOfferItem render correctly Should CurrentOfferItem render correctly without premium offers and casual host when the user is unauthorized 1`] = `
<div
  className="property__wrapper"
>
  
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      The house among olive
    </h1>
    <button
      className="property__bookmark-button button"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "76%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      3.8
    </span>
  </div>
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      house
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      2
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adult
      s
    </li>
  </ul>
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      200
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>
  <div
    className="property__inside"
  >
    <h2
      className="property__inside-title"
    >
      What's inside
    </h2>
    <ul
      className="property__inside-list"
    >
      <li
        className="property__inside-item"
      >
        Laptop friendly workspace
      </li>
      <li
        className="property__inside-item"
      >
        Washer
      </li>
      <li
        className="property__inside-item"
      >
        Towels
      </li>
    </ul>
  </div>
  <div
    className="property__host"
  >
    <h2
      className="property__host-title"
    >
      Meet the host
    </h2>
    <div
      className="property__host-user user"
    >
      <div
        className="property__avatar-wrapper user__avatar-wrapper"
      >
        <img
          alt="Host avatar"
          className="property__avatar user__avatar"
          height="74"
          src="/img/avatar-angelina.jpg"
          width="74"
        />
      </div>
      <span
        className="property__user-name"
      >
        Angelina
      </span>
    </div>
    <div
      className="property__description"
    >
      <p
        className="property__text"
      >
        Discover daily local life in city center,
    friendly neighborhood, clandestine casino, karaoke,
    old-style artisans, art gallery and artist studio downstairs.
      </p>
    </div>
  </div>
  <section
    className="property__reviews reviews"
  >
    <h2
      className="reviews__title"
    >
      Reviews · 
      <span
        className="reviews__amount"
      >
        2
      </span>
    </h2>
    <ul
      className="reviews__list"
    >
      <li
        className="reviews__item"
      >
        <div
          className="reviews__user user"
        >
          <div
            className="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              className="reviews__avatar user__avatar"
              height="54"
              src="img/avatar-angelina.jpg"
              width="54"
            />
          </div>
          <span
            className="reviews__user-name"
          >
            Angelina
          </span>
        </div>
        <div
          className="reviews__info"
        >
          <div
            className="reviews__rating rating"
          >
            <div
              className="reviews__stars rating__stars"
            >
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
              <span
                className="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            className="reviews__text"
          >
            The house is very good, very happy, hygienic and simple living conditions around it are also very good
          </p>
          <time
            className="reviews__time"
            dateTime="2020-11-01"
          >
            November 2020
          </time>
        </div>
      </li>
      <li
        className="reviews__item"
      >
        <div
          className="reviews__user user"
        >
          <div
            className="reviews__avatar-wrapper user__avatar-wrapper"
          >
            <img
              alt="Reviews avatar"
              className="reviews__avatar user__avatar"
              height="54"
              src="img/avatar-angelina.jpg"
              width="54"
            />
          </div>
          <span
            className="reviews__user-name"
          >
            Angelina
          </span>
        </div>
        <div
          className="reviews__info"
        >
          <div
            className="reviews__rating rating"
          >
            <div
              className="reviews__stars rating__stars"
            >
              <span
                style={
                  Object {
                    "width": "60%",
                  }
                }
              />
              <span
                className="visually-hidden"
              >
                Rating
              </span>
            </div>
          </div>
          <p
            className="reviews__text"
          >
            The deluxe room was a quite comfortable one with all the adequate facilities
          </p>
          <time
            className="reviews__time"
            dateTime="2020-11-01"
          >
            November 2020
          </time>
        </div>
      </li>
    </ul>
  </section>
</div>
`;

exports[`Should CurrentOfferItem render correctly Should CurrentOfferItem render correctly without reviews 1`] = `
<div
  className="property__wrapper"
>
  
  <div
    className="property__name-wrapper"
  >
    <h1
      className="property__name"
    >
      The house among olive
    </h1>
    <button
      className="property__bookmark-button button"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="property__bookmark-icon"
        height="33"
        width="31"
      >
        <use
          xlinkHref="#icon-bookmark"
        />
      </svg>
      <span
        className="visually-hidden"
      >
        To bookmarks
      </span>
    </button>
  </div>
  <div
    className="property__rating rating"
  >
    <div
      className="property__stars rating__stars"
    >
      <span
        style={
          Object {
            "width": "76%",
          }
        }
      />
      <span
        className="visually-hidden"
      >
        Rating
      </span>
    </div>
    <span
      className="property__rating-value rating__value"
    >
      3.8
    </span>
  </div>
  <ul
    className="property__features"
  >
    <li
      className="property__feature property__feature--entire"
    >
      house
    </li>
    <li
      className="property__feature property__feature--bedrooms"
    >
      2
       Bedrooms
    </li>
    <li
      className="property__feature property__feature--adults"
    >
      Max 
      4
       adult
      s
    </li>
  </ul>
  <div
    className="property__price"
  >
    <b
      className="property__price-value"
    >
      €
      200
    </b>
    <span
      className="property__price-text"
    >
       night
    </span>
  </div>
  <div
    className="property__inside"
  >
    <h2
      className="property__inside-title"
    >
      What's inside
    </h2>
    <ul
      className="property__inside-list"
    >
      <li
        className="property__inside-item"
      >
        Laptop friendly workspace
      </li>
      <li
        className="property__inside-item"
      >
        Washer
      </li>
      <li
        className="property__inside-item"
      >
        Towels
      </li>
    </ul>
  </div>
  <div
    className="property__host"
  >
    <h2
      className="property__host-title"
    >
      Meet the host
    </h2>
    <div
      className="property__host-user user"
    >
      <div
        className="property__avatar-wrapper user__avatar-wrapper"
      >
        <img
          alt="Host avatar"
          className="property__avatar user__avatar"
          height="74"
          src="/img/avatar-angelina.jpg"
          width="74"
        />
      </div>
      <span
        className="property__user-name"
      >
        Angelina
      </span>
    </div>
    <div
      className="property__description"
    >
      <p
        className="property__text"
      >
        Discover daily local life in city center,
    friendly neighborhood, clandestine casino, karaoke,
    old-style artisans, art gallery and artist studio downstairs.
      </p>
    </div>
  </div>
  <section
    className="property__reviews reviews"
  >
    <h2
      className="reviews__title"
    >
      Reviews · 
      <span
        className="reviews__amount"
      >
        
      </span>
    </h2>
  </section>
</div>
`;
